[package]
name = "bmcd"
version = "2.0.5"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75.0"

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = { version = "4.5.1", features = ["openssl"] }
actix-ws = "0.2.5"
anyhow = "1.0.80"
async-compression = { version = "0.4.6", features = ["tokio", "gzip", "xz"] }
async-trait = "0.1.77"
base64 = "0.21.7"
bincode = "1.3.3"
build-time = "0.1.3"
bytes = "1.5.0"
chrono = "0.4.35"
circular-buffer = "0.1.6"
clap = { version = "4.4.18", features = ["cargo"] }
crc = "3.0.1"
evdev = { version = "0.12.1", features = ["tokio"] }
futures = "0.3.30"
gpiod = { version = "0.2.3" }
hex = "0.4.3"
humansize = "2.1.3"
humantime = "2.1.0"
if-addrs = "0.11.0"
inotify = "0.10.2"
nix = { version = "0.27.1", features = ["fs", "feature"] }
openssl = "0.10.64"
pin-project = "1.1.5"
pwhash = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["stream"] }
rockfile = { version = "0.1.1" }
rockusb = { version = "0.1.3" }
rusb = "0.9.3"
rustpiboot = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
serde_yaml = "0.9.32"
sha2 = "0.10.8"
tar = "0.4.40"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = [
    "rt-multi-thread",
    "rt",
    "time",
    "macros",
    "io-util",
    "net",
] }
tokio-serial = { version = "5.4.4", features = ["rt", "codec"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = { version = "0.7.10", features = ["io-util"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempdir = "0.3.7"

[profile.release]
lto = "thin"
opt-level = "z"
strip = true

[features]
stubbed = []
vendored = ["openssl/vendored"]

