[package]
name = "bmcd"
version = "2.3.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75.0"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = { version = "4.8.0", features = ["openssl"] }
actix-ws = "0.3.0"
anyhow = "1.0.86"
async-compression = { version = "0.4.12", features = ["tokio", "gzip", "xz"] }
async-trait = "0.1.81"
base64 = "0.22.1"
bincode = "1.3.3"
build-time = "0.1.3"
bytes = "1.7.1"
chrono = "0.4.38"
circular-buffer = "0.1.7"
clap = { version = "4.5.13", features = ["cargo"] }
crc = "3.2.1"
evdev = { version = "0.12.2", features = ["tokio"] }
futures = "0.3.30"
gpiod = { version = "0.3.0" }
hex = "0.4.3"
humansize = "2.1.3"
humantime = "2.1.0"
if-addrs = "0.13.1"
inotify = "0.10.2"
nix = { version = "0.29.0", features = ["fs", "feature"] }
openssl = "0.10.66"
pin-project = "1.1.5"
pwhash = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["stream"] }
rockfile = { version = "0.1.1" }
rockusb = { version = "0.1.3" }
rusb = "0.9.4"
rustpiboot = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_with = "3.9.0"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tar = "0.4.41"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = [
    "rt-multi-thread",
    "rt",
    "time",
    "macros",
    "io-util",
    "net",
] }
tokio-serial = { version = "5.4.4", features = ["rt", "codec"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = { version = "0.7.11", features = ["io-util"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tempdir = "0.3.7"

[profile.release]
lto = "thin"
opt-level = "z"
strip = true

[features]
stubbed = []
vendored = ["openssl/vendored"]

