[package]
name = "bmcd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
build-time = "0.1.3"
if-addrs = "0.10.1"
nix = "0.26.4"
serde_json = "1.0.106"
tpi_rs = { path = "../tpi_rs" }
clap = "4.4.2"

anyhow.workspace = true
log.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
