[package]
name = "bmcd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.4.0", features = ["openssl"] }
build-time = "0.1.3"
if-addrs = "0.10.1"
nix = "0.26.4"
serde_json = "1.0.106"
serde_yaml = "0.9.25"
tpi_rs = { path = "../tpi_rs" }
clap = { version = "4.4.2", features = ["cargo"] }
openssl = "0.10.57"
rand = "0.8.5"
pwhash = "1.0.0"
base64 = "0.21.4"

anyhow.workspace = true
log.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_with = "3.3.0"
