[package]
name = "board-info"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "src/board_info.rs"

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
bytes = "1.10.0"
chrono = "0.4.39"
clap = { version = "4.5.29", optional = true  }
crc32fast = "1.4.2"
hex = "0.4.3"

[features]
clap_derive = ["clap/derive"]

