[package]
name = "tpi_rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
crc = "3.0.1"
evdev = { version = "0.12.1", features = ["tokio"] }
futures = "0.*"
gpiod = { version = "0.2.3", default-features = false }
once_cell = "1.18.0"
rockfile = { version = "0.1.0"}
rockusb = { git = "https://github.com/svenrademakers/rockchiprs.git", branch="main"}
rusb = "0.9.2"
rustpiboot = { git = "https://github.com/ruslashev/rustpiboot.git", rev="89e6497"}
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "sqlite"
] }
futures-concurrency = "7.4.2"

anyhow.workspace = true
log.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tokio-util.workspace = true

