[package]
name = "tpi_rs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
bincode = "1.3.3"
bytes = "1.5.0"
crc = "3.0.1"
evdev = { version = "0.12.1", features = ["tokio"] }
gpiod = { version = "0.2.3", default-features = false }
once_cell = "1.18.0"
rockfile = { version = "0.1.0"}
rockusb = { version = "0.1.1" }
rusb = "0.9.3"
rustpiboot = { git = "https://github.com/ruslashev/rustpiboot.git", rev="89e6497"}
serde = { version = "1.0.188", features = ["derive"] }
tokio-serial = { version = "5.4.4", features = ["rt", "codec"] }

anyhow.workspace = true
log.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

[dev-dependencies]
tempdir = "0.3.7"
